--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="container"></div>
+    <button>New Image</button>
     <script src="main.js"></script>
   </body>
 </html>
